@@ -49,6 +49,7 @@ S3method(print,textmodel_wordscores_fitted)
 S3method(print,textmodel_wordscores_predicted)
 S3method(quantedaformat2dtm,dfm)
 S3method(readability,character)
+S3method(readability,corpus)
 S3method(removeFeatures,character)
 S3method(removeFeatures,collocations)
 S3method(removeFeatures,dfm)
